# SciScreen

./: .gitignore  .pre-commit-config.yaml  GUIDE_RECHERCHE.md  Makefile  README.md  TEST_CORRECTIONS_TINDER.md  create_test_excel.py  data_test.xlsx  env.example  launch_advanced_app.bat  launch_app.bat  launch_enhanced_app.bat  launch_research_app.bat  pyproject.toml  requirements.txt  test_data_with_new_columns.xlsx  test_research_app.py  test_setup.py
app/: advanced_research_app.py  enhanced_research_app.py  research_app.py  simple_streamlit_app.py  streamlit_app.py
app/components/swipe_card/: manifest.json
data/processed/: labeled_history.csv
data/raw/: combined_harvest_20241226.csv  demo_harvest_20241226.jsonl
r/: dedup.R
src/: __init__.py  cli.py  config.py  utils_io.py
src/harvest/: __init__.py  crossref.py  openalex.py  pubmed.py  scopus.py  unpaywall.py
src/pipeline/: __init__.py  deduplicate.py  enrich.py  filter_rules.py  normalize.py  prisma.py  report.py  scoring.py
src/zotero/: __init__.py  zotero_client.py
tests/: conftest.py  test_deduplicate.py  test_filter_rules.py  test_normalize.py  test_scoring.py
